# bookbot

./: .dockerignore  .gitignore  BookBot_Agent_Prompt.md  Dockerfile  FEEDBACK.md  FIXES_APPLIED.md  Makefile  README.md  __init__.py  compose.example.yml  coverage.xml  pyproject.toml  test_audible_auth.py  toml.py
.github/workflows/: bookbot.yaml  ci.yml  release.yml
bookbot/: __init__.py  cli.py  gui.py
bookbot/abs/: __init__.py  client.py  sync.py
bookbot/chapters/: __init__.py  detector.py  models.py  writer.py
bookbot/config/: __init__.py  manager.py  models.py
bookbot/convert/: __init__.py  ffmpeg.py  pipeline.py
bookbot/core/: __init__.py  dedupe.py  discovery.py  doctor.py  exceptions.py  health.py  logging.py  matching.py  models.py  operations.py  organizer.py  planning.py  templates.py
bookbot/data/: author_aliases.json
bookbot/drm/: __init__.py  activator.py  audible_browser_auth.py  audible_client.py  detector.py  models.py  remover.py  secure_storage.py
bookbot/io/: __init__.py  cache.py  sidecar.py
bookbot/providers/: __init__.py  audible.py  audnexus.py  base.py  googlebooks.py  hardcover.py  health.py  librivox.py  local.py  manager.py  openlibrary.py
bookbot/tests/: __init__.py
bookbot/tui/: __init__.py  app.py  screens.py
scripts/: build_binary.py  completions.py  package.py  release.py
test_library/11.22.63 - Stephen King/: metadata.json
test_library/A Good Girl's Guide to Murder/: metadata.json
test_library/Cujo - Stephen King/: metadata.json
testing/The Wife Upstairs by Freida McFadden/: The_Wife_Upstairs__A_twisted_ps_-_Freida_McFadden.epub
testing/Tina Fey- Bossypants/: Tina Fey - Bossypants (epub).epub  Tina Fey - Bossypants (mobi).mobi
testing/Tina Fey- Bossypants/Tina Fey - Bossypants (html)/: Bossypants.html  content.opf  stylesheet.css  toc.ncx
tests/: conftest.py  test_abs_client.py  test_audnexus_provider.py  test_chapter_detector.py  test_cli_match.py  test_dedupe.py  test_discovery.py  test_discovery_tag_extraction.py  test_doctor_cli.py  test_hardcover_provider.py  test_health_checker.py  test_identifiers.py  test_import_shim.py  test_local_provider.py  test_matching.py  test_merged_matching.py  test_organizer.py  test_planning.py  test_rescan_idempotence.py  test_round3_smoke.py  test_round4_regressions.py  test_sidecar.py  test_templates.py  test_tui_matching.py  test_tui_preview.py
tests/fixtures/messy_library/Stephen King - Cujo/: Cujo.m4b
tests/golden/: audiobookshelf_plan.json  plex_plan.json
